<resources>
	<string name="app_name">fmedia</string>
	<string name="bexplorer">Explorer</string>
	<string name="bplaylist">Playlist</string>

	<string name="menu_settings">Settings...</string>
	<string name="mfile_tags_show">File: Show Tags</string>
	<string name="mfile_convert">File: Convert...</string>
	<string name="menu_show_expl">File: Show Current Track</string>
	<string name="mfile_del">File: Delete from Storage</string>
	<string name="mfile_move">File: Quick Move!</string>
	<string name="mlist_save">List: Save...</string>
	<string name="mlist_add">List: Add...</string>
	<string name="mlist_remove">List: Remove Current Track</string>
	<string name="mlist_clear">List: Clear</string>
	<string name="mlist_show_track">List: Show Current Track</string>
	<string name="mlist_switch">List: Switch L1/L2</string>
	<string name="mlist_l2add">List: Add Current to L2</string>
	<string name="menu_about">About...</string>

	<string name="sett_interface">Interface</string>
	<string name="sett_dark">Dark Theme</string>
	<string name="sett_show_filter">Hide "Search" Edit Box</string>
	<string name="sett_show_record">Hide "Record" Button</string>
	<string name="sett_ui_info_in_title">Show Audio Info in Title</string>
	<string name="sett_svc_notif_disable">Disable System Notification (requires restart)</string>

	<string name="sett_playback">Playback</string>
	<string name="sett_random">Random</string>
	<string name="sett_repeat_all">Repeat All</string>
	<string name="sett_no_tags">Don\'t Read Tags</string>
	<string name="sett_list_rm_on_next">Remove Track from Playlist after I Tap Next</string>
	<string name="sett_list_rm_on_err">Remove Track from Playlist on Error</string>
	<string name="sett_codepage">Codepage for Non-Unicode Tags</string>
	<string name="sett_autoskip">Auto-Skip Audio (sec):</string>

	<string name="sett_operation">Operation</string>
	<string name="sett_file_del">Don\'t Move Files to Trash</string>
	<string name="sett_trash_dir">Trash Directory (relative to storage mount-point):</string>
	<string name="sett_quick_move_dir">Quick-Move Directory:</string>

	<string name="sett_recording">Recording</string>
	<string name="sett_data_dir">App Data Directory</string>
	<string name="sett_rec_dir">Directory for Recordings</string>
	<string name="sett_rec_enc">Encoder (AAC-LC | AAC-HE | AAC-HEv2 | FLAC):</string>
	<string name="sett_bitrate">Encoder Bitrate (kbit/sec):</string>
	<string name="sett_rec_buf_len">Buffer Length (msec):</string>
	<string name="sett_rec_until">Auto-Stop After (sec):</string>
	<string name="sett_rec_gain">Gain/attenuate (dB):</string>
	<string name="sett_rec_exclusive">Exclusive Mode</string>

	<string name="lssv_ldir">Output directory:</string>
	<string name="lssv_lname">Playlist name:</string>
	<string name="lssv_bsave">Save</string>

	<string name="conv_input_file">Input file:</string>
	<string name="conv_out_dir">Output directory:</string>
	<string name="conv_out_name">Output file name (w/o extension):</string>
	<string name="conv_out_fmt">Output format (flac | m4a | mp3):</string>
	<string name="conv_apos_start">Start Audio Position:</string>
	<string name="conv_from_set_cur">Set To Current</string>
	<string name="conv_apos_end">End Audio Position:</string>
	<string name="conv_sample_rate">Sample rate (Hz)</string>
	<string name="conv_aac_q">[.m4a] AAC Quality: 1..5 (VBR) or 8..800 (CBR, kbit/s)</string>
	<string name="conv_copy">[.mp3/.m4a] Stream Copy</string>
	<string name="conv_preserve_date">Preserve File Date</string>
	<string name="conv_trash_orig">Move Input File to Trash</string>
	<string name="conv_pl_add">Add New File to Playlist</string>
	<string name="conv_go">Convert!</string>

	<string name="about">fmedia for Android v0.11 EXPERIMENTAL\n\nhttps://stsaz.github.io/fmedia</string>
</resources>
