<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/action_settings"
		android:title="@string/menu_settings" />
	<item
		android:id="@+id/action_file_del"
		android:title="@string/mfile_del" />
	<item
		android:id="@+id/action_list_save"
		android:title="@string/mlist_save" />
	<item
		android:id="@+id/action_list_load"
		android:title="@string/mlist_load" />
	<item
		android:id="@+id/action_list_add"
		android:title="@string/mlist_add" />
	<item
		android:id="@+id/action_list_rm"
		android:title="@string/mlist_remove" />
	<item
		android:id="@+id/action_list_clear"
		android:title="@string/mlist_clear" />
	<item
		android:id="@+id/action_list_showcur"
		android:title="@string/mlist_show_track" />
	<item
		android:id="@+id/action_list_showcur_explorer"
		android:title="@string/mlist_show_expl" />
	<item
		android:id="@+id/action_about"
		android:title="@string/menu_about" />
</menu>